# vulnbox-security-scanner

./: .gitignore  README.md  pyproject.toml  requirements.txt  vulnbox_legacy.py
test/: demo.py
vulnbox/: __main__.py  cli.py  config.py  utils.py
vulnbox.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
vulnbox/reporting/: markdown.py
vulnbox/reporting/2025-12-24_15-08-43/: bandit.json  bandit.txt  pip_audit.txt  report.md  secrets.json  secrets.txt
vulnbox/scanners/: bandit_scan.py  pip_audit.py  scan.py  secrets.py
