[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vulnbox"
version = "0.1.0"
description = "Developer-focused security scanner (CLI)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "bandit",
  "pip-audit",
]

[tool.setuptools]
packages = ["vulnbox"]
